Changelog
=========

1.6.7 - Unreleased
------------------

- Modifies Add wizard.
  [Jose Dinuncio, Cesar Gonzalez]

- Dump initial setup installation profile.
  [Vitaliy Podoba]

- Fix comment layout.
  [Cesar Gonzalez]

- Fix search box style in Dashboard Mode.
  [Cesar Gonzalez]

- Disable top rated and action list viewlets.
  [Vitaliy Podoba]

- Fix indexes installation.
  [Vitaliy Podoba]

1.6.6 - December 24, 2012
-------------------------

- Introduce popup mode.
  [Vitaliy Podoba]

- Adds Products.CMFNotification as dependency.
  [Jose Dinuncio]

- Adds cioppino.twothumbs as dependency.
  [Jose Dinuncio]

- Adds Products.Carousel as dependency.
  [Jose Dinuncio]

- Adds jarn (xmpp.core, jsi18n and xmpp.collaboration) as dependencies.
  [Jose Dinuncio]

- Made datetime widget work on notices control panel forms.
  [Vitaliy Podoba]

- Disable plone.formwidget.autocomplete resources. It conflicts
  with jquery UI Tools autocomplete widget.
  [Vitaliy Podoba]

- Fixed notices styles.
  [Vitaliy Podoba]


1.6.5 - December 5, 2012
------------------------

- New code for zimbra_get_tree_json view.
  [Jose Dinuncio]

- Do not allow to create rooms in which user has no permissions to participate.
  [Taras Melnychuk]

- Fixed rooms autosuggestion. (unescape room names)
  [Taras Melnychuk]

- Show 'Active rooms' list when new message is received.
  [Taras Melnychuk]

- Reset JOIN and FIND chat form fields after successful posts.
  [Vitaliy Podoba]

- Applied existing rooms autosuggestion list to JOIN room form.
  [Taras Melnychuk]

- Refactored Available Rooms into Active Rooms list.
  [Taras Melnychuk]

- Move add participants button in cloudchat to Rooms pane.
  [Taras Melnychuk]


1.6.4 - November 13, 2012
-------------------------

- Adjust css: Global navigation, inputs elem, content shadows.
  [Cesar Gonzalez]

- Change css&layout Action Menu, content, comment box. Fix invite overlay
  autocomplete.
  [Cesar Gonzalez]

- Add images (#5092)
  [Cesar Gonzalez]
