@@ -41,6 +41,7 @@ setup(name='vnccollab.theme',
           'tldextract',
           'Products.AdvancedQuery',
           'collective.xmpp.chat',
+          'plone.api',
           'plone.app.jquery',
           'plone.app.jquerytools',
           'jarn.xmpp.core',
